flask-ipl/yamls/flask-app-pod.yml
apiVersion: v1
kind: Pod
metadata:
  #namespace: flask-app
  name: flask-app
  labels:
    app: flask-ipl-app
spec:
  containers:
  - name: ipl-app 
    image: punithmgp/flask-ipl:v1.0
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        cpu: "200m"
        memory: "128Mi"
      requests:
        cpu: "100m"
        memory: "128Mi"
    volumeMounts:
    - name: db-volume
      mountPath: /usr/src/database 
    ports:
    - containerPort: 5000
      name: flask-port
      # Default protocol is TCP
      protocol: TCP

  volumes:
  - name: db-volume
    # temporary, update the volume type to pv
    emptyDir: {}
  # default dnsPolicy is ClusterFirst
  dnsPolicy: ClusterFirst
