flask-ipl/yamls/flask-app-nodePort-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-svc
spec:
  selector:
    app: flask-ipl-app
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
    # Make sure the NodePort port is available
    NodePort: 30080
    protocol: TCP
